main-page-infra/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-page-service
spec:
  selector:
    app: main-page
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
