main-page-infra/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: main-page
  namespace: main-page
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`mlopstrain.bieda.it`) && Path(`/`)
    kind: Rule
    services:
    - name: main-page-service
      port: 80
      passHostHeader: true
